@@ -220,6 +220,10 @@ rotate_access_log = false
 # since V4.00
 access_log_rotate_time=00:00
 
+# if skip the invalid record when sync file
+# default value is false
+# since V4.02
+file_sync_skip_invalid_record=false
 
 #HTTP settings
 http.disabled=false
