@@ -146,6 +146,8 @@ extern bool g_client_bind_addr;
 extern bool g_storage_ip_changed_auto_adjust;
 extern bool g_thread_kill_done;
 
+extern bool g_file_sync_skip_invalid_record;
+
 extern int g_thread_stack_size;
 extern int g_upload_priority;
 extern time_t g_up_time;
